Changes for 1.8.0:

- Implement builder for ItemViewComponentProvider
- Implement StringCompleterEditor and StringCompleterComboEditor for cells of Qt trees and tables
- Implement possibility to configure ViewmodelDelegate with external cell editor factory
- Move cell editors in sup-mvvm library
- Provide possibility to filter out children during XML string generation
- Make BooleanEditor and ComboEditor in tree cells closing after editing finished
- Fix Qt warnings in celleditors example
- Provide tooltips for ComboBox property editors.

Changes for 1.7.0:

- COA Release v3.0, CODAC Core System Release 7.3, March 2025
- Fix bug with the serialization of large int64
- Fix bug with two digits only while editing integers and floats in filtered trees
- Fix MacOs build
- Refactor static model type registration
- Provide experimental WebAssembly build
- Enable user examples build by default
- Borrow external library sup-xml
- Adjust integer types to match sup-dto types
- Switch from int to std::size_t in SessionItem related containers

Changes for 1.6.0:

- COA Release v2.3, January 2025
- Round of Sonar/Misra/Parasoft code quality fixes
- Switch to Qt6 by default
- Simplify item clone and deep copy machinery
- Implement user example demonstrating new project save machinery
- Implement user example demonstrating undo/redo
- First implementation of Waveforms with QChart plotting machinery
- Implement user interaction machinery for project save/load
- Refactor ProjectManager machinery with model recreation feature
- Switch SessionItem data underlying containainer to map
- Enable/disable property machinery for flat view
- Fix bug for label in flat view

Changes for 1.5.0:

- CODAC Core System Release 7.2.1
- Add macro capabilities to the model's API
- Provide limit for number of undo commands
- Implement macro command for undo/redo framework
- COA Release v2.2, August 2024
- New ItemViewComponentProvider with the possibility to install proxy models