@@ -11,6 +11,7 @@ target_sources(${library_name} PRIVATE
   unique_id_generator.h
   variant.cpp
   variant.h
+  variant_index.h
   variant_value_visitor.cpp
   variant_value_visitor.h
   version.cpp
